# WavetableSynth

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  JuceHeader.h  LookAndFeel.cpp  LookAndFeel.h  ModMatrix.cpp  ModMatrix.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  WavetableOscillator.cpp  WavetableOscillator.h
